--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,1 +1,59 @@
-<p>cart works!</p>
+<div style="margin-top: 40px;">
+    <div style="height: 90vh;" class="empty-cart mt-5 mb-3 d-flex justify-content-center align-items-center w-100 flex-column">
+        <img src="https://cdni.iconscout.com/illustration/premium/thumb/empty-cart-5521508-4610092.png" alt="image">
+        <h1 class="text-danger fw-bolder">Youre cart is Empty</h1>
+        <button  class="btn btn-success" routerLink="">Add more Items</button>
+    </div>
+    <div class="wishlist">
+      <div class="container px-4 px-lg-5 mt-5"> 
+         <h1 class="text-danger fw-bolder">Cart Summary</h1>
+         <div class="row">
+            <div class="col-lg-8">
+                <table class="table shadow mt-5">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Product Name</th>
+                            <th>Image</th>
+                            <th>Quantity</th>
+                            <th>Price</th>
+                            <th><i class="fa-solid fa-ellipsis-vertical"></i></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Mens Casual</td>
+                            <td><img width="100px" height="100px" src="https://merchshop.in/wp-content/uploads/2019/10/React-JS-Pocket-logo-t-shirt-black-1.jpg" alt=""></td>
+                           
+                            <td>
+                               <div class="d-flex">
+                                    <button class="btn fw-bolder">-</button>
+                                     <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" readonly/>
+                                    <button class="btn fw-bolder">+</button>
+                               </div>
+                            </td>
+                            <td>$200</td>
+                            <td><button class="btn"><i class="fa-solid fa-trash text-danger"></i></button></td>
+                        </tr>
+                    </tbody>
+
+                </table>
+            </div>
+            <div class="col-lg-4">
+                <div class="border rounded p-3">
+                    <h3>Sub Total : <span class="text-danger">$340</span></h3>
+                    <hr>
+                    <div class="d-grid">
+                        <button class="btn btn-primary">Check out</button>
+                    </div>
+                </div>
+            </div>
+         </div>
+        
+        </div>
+
+        
+    </div>
+    
+    !</div>
