--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,41 @@
-<p>register works!</p>
+<div style="width: 100%; height: 100vh;" class="d-flex justify-content-center align-items-center">
+    <div style="width: 1100px;" class="shadow p-5 row rounded bg-light">
+      <div class="col-lg-8">
+        <img class="w-75"  src="https://media.istockphoto.com/id/1281150061/fr/vectoriel/enregistrer-compte-soumettre-acc%C3%A8s-mot-de-passe-de-connexion-nom-dutilisateur-internet.jpg?b=1&s=612x612&w=0&k=20&c=nkGOUnsjeMNtjQ9SCEterGIj3BEeJ3_u-ObXw478pN8=" alt="">
+      </div>
+      <div class="col-lg-4">
+        <form >
+            <h1 class="fw-bolder mb-5">Welcome User</h1>
+            <div class="form-floating mb-3 ">
+              
+                <input type="text" class="form-control" name="username" id="floatingInput" placeholder="User name"  email required >
+                <label  for="floatingInput">Username</label>
+              </div>
+            <div class="form-floating mb-3 ">
+              
+                <input type="email" class="form-control" name="email" id="floatingInput" placeholder="name@example.com"  email required >
+                <label  for="floatingInput">Email address</label>
+              </div>
+              <!-- Invalid email -->
+              <!-- <div *ngIf="useremailinput.invalid && useremailinput.touched" class="mb-3 text-danger fw-bolder">
+                Invalid Email
+              </div> -->
+              <div class="form-floating mb-3 ">
+                
+                <input type="password" id="floatingPassword" placeholder="password" class="form-control" name="password">
+                <label for="floatingPassword">Password</label>
+              </div>
+               <!-- Invalid password -->
+               <!-- <div *ngIf="userpassword.invalid && userpassword.touched" class="mb-3 text-danger fw-bolder">
+                Invalid Password
+              </div> -->
+              <div class="d-grid">
+                <button  type="submit" class="btn btn-primary">Register</button></div>
+                
+        </form>
+        <p class="text-center mt-4">Already User?click here to <a routerLink="/user/login">Login</a></p>
+      </div>
+     
+    </div>
+</div>
+
