--- a/src/app/aii-products/aii-products.component.html
+++ b/src/app/aii-products/aii-products.component.html
@@ -33,18 +33,18 @@
   <section class="py-5">
     <div class="container px-4 px-lg-5 mt-5">
       <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-        <div class="col mb-5">
-          <div class="card h-100 shadow">
+        <div class="col mb-5" *ngFor="let product of allproducts">
+          <div class="card h-100 shadow p-3">
             <!-- Product image-->
-            <img routerLink="view/1" class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+            <img height="250px" routerLink="view/{{product.id}}" class="card-img-top" [src]="product.image"
               alt="..." />
             <!-- Product details-->
             <div class="card-body p-4">
               <div class="text-center">
                 <!-- Product name-->
-                <h5 class="fw-bolder">Fancy Product</h5>
+                <h5 class="fw-bolder">{{product.title.slice(0,20)}}...</h5>
                 <!-- Product price-->
-                $40.00 - $80.00
+                ${{product.price}}
               </div>
             </div>
             <!-- Product actions-->
