--- a/src/app/aii-products/aii-products.component.html
+++ b/src/app/aii-products/aii-products.component.html
@@ -50,9 +50,9 @@
             <!-- Product actions-->
             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
               <div class="d-flex justify-content-between">
-                <button class="btn"><i style="height: 40px;"
+                <button (click)="addWishlist(product)" class="btn"><i style="height: 40px;"
                     class="fa-solid fa-heart text-danger me-1 fa-2x"></i></button>
-                <button class="btn"><i style="height: 40px;"
+                <button (click)="addtocart(product)" class="btn"><i style="height: 40px;"
                     class="fa-solid fa-cart-plus text-success me-1 fa-2x"></i></button>
 
               </div>
