--- a/src/app/aii-products/aii-products.component.html
+++ b/src/app/aii-products/aii-products.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div style="margin-top: 60px;">
   <header>
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
