--- a/src/app/view-product/view-product.component.html
+++ b/src/app/view-product/view-product.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div style="margin-top: 70px;"><!-- Product section-->
     <section >
         <div class="container px-4 px-lg-5 my-5">
