--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div style="margin-top: 40px;">
     <div style="height: 90vh;" class="empty-wishlist mt-5 mb-3 d-flex justify-content-center align-items-center w-100 flex-column">
         <img src="https://cdni.iconscout.com/illustration/premium/thumb/empty-cart-5521508-4610092.png" alt="image">
