--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -1,32 +1,32 @@
 <app-header></app-header>
 <div style="margin-top: 40px;">
-    <div style="height: 90vh;" class="empty-wishlist mt-5 mb-3 d-flex justify-content-center align-items-center w-100 flex-column">
+    <div *ngIf="allProducts==0"  style="height: 90vh;" class="empty-wishlist mt-5 mb-3 d-flex justify-content-center align-items-center w-100 flex-column">
         <img src="https://cdni.iconscout.com/illustration/premium/thumb/empty-cart-5521508-4610092.png" alt="image">
         <h1 class="text-danger fw-bolder">Youre Wishlist is Empty</h1>
         <button  class="btn btn-success" routerLink="">Add more Items</button>
     </div>
-    <div class="wishlist">
+    <div *ngIf="allProducts.length>0" style="margin-top: 50px;" class="wishlist">
         <h1 class="text-danger fw-bolder">Youre Wishlist....</h1>
         <div class="container px-4 px-lg-5 mt-5">
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-              <div class="col mb-5">
+              <div class="col mb-5" *ngFor="let Product of allProducts" >
                 <div class="card h-100 shadow">
                   <!-- Product image-->
-                  <img routerLink="view/1" class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+                  <img routerLink="view/1" class="card-img-top" [src]="Product.image"
                     alt="..." />
                   <!-- Product details-->
                   <div class="card-body p-4">
                     <div class="text-center">
                       <!-- Product name-->
-                      <h5 class="fw-bolder">Fancy Product</h5>
+                      <h5 class="fw-bolder">{{Product.title.slice(0,20)}}...</h5>
                       <!-- Product price-->
-                      $40.00 - $80.00
+                      ${{Product.price}}
                     </div>
                   </div>
                   <!-- Product actions-->
                   <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                     <div class="d-flex justify-content-between">
-                      <button class="btn"><i style="height: 40px;"
+                      <button (click)="removeItem(Product._id)" class="btn"><i style="height: 40px;"
                           class="fa-solid fa-heart text-danger me-1 fa-2x"></i></button>
                       <button class="btn"><i style="height: 40px;"
                           class="fa-solid fa-cart-plus text-success me-1 fa-2x"></i></button>
