--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,7 +14,7 @@
           </li>
           <li class="nav-item active">
             <a class="nav-link" routerLink="user/wishlist">
-                <button class="btn btn-outline-dark d-flex align-items-center"><i class="fa-solid fa-heart text-danger me-1"></i>Wishlist <span class="badge bg-dark ms-1">0</span> </button>
+                <button class="btn btn-outline-dark d-flex align-items-center"><i class="fa-solid fa-heart text-danger me-1"></i>Wishlist <span class="badge bg-dark ms-1">{{wishlistCount}}</span> </button>
             </a>
           </li>
        
