--- a/src/app/view-product/view-product.component.html
+++ b/src/app/view-product/view-product.component.html
@@ -14,7 +14,7 @@
                     <p class="lead" style="text-align: justify;">{{product.description}}</p>
                     <div class="d-flex justify-content-between">
                         <!-- <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" /> -->
-                        <button class="btn btn-outline-dark flex-shrink-0" type="button">
+                        <button (click)="addWishlist(product)" class="btn btn-outline-dark flex-shrink-0" type="button">
                             <i class="fa-solid fa-heart text-danger me-1"></i>
                             Add to wishlist
                         </button>
