--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <div style="margin-top: 40px;">
-    <div *ngIf="allProducts==0"  style="height: 90vh;" class="empty-wishlist mt-5 mb-3 d-flex justify-content-center align-items-center w-100 flex-column">
+    <div *ngIf="allProducts.length===0"  style="height: 90vh;" class="empty-wishlist mt-5 mb-3 d-flex justify-content-center align-items-center w-100 flex-column">
         <img src="https://cdni.iconscout.com/illustration/premium/thumb/empty-cart-5521508-4610092.png" alt="image">
         <h1 class="text-danger fw-bolder">Youre Wishlist is Empty</h1>
         <button  class="btn btn-success" routerLink="">Add more Items</button>
@@ -12,7 +12,7 @@
               <div class="col mb-5" *ngFor="let Product of allProducts" >
                 <div class="card h-100 shadow">
                   <!-- Product image-->
-                  <img routerLink="view/1" class="card-img-top" [src]="Product.image"
+                  <img routerLink="view/{{Product.id}}" height="250px"  class="card-img-top" [src]="Product.image"
                     alt="..." />
                   <!-- Product details-->
                   <div class="card-body p-4">
@@ -26,8 +26,7 @@
                   <!-- Product actions-->
                   <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                     <div class="d-flex justify-content-between">
-                      <button (click)="removeItem(Product._id)" class="btn"><i style="height: 40px;"
-                          class="fa-solid fa-heart text-danger me-1 fa-2x"></i></button>
+                      <button (click)="removeItem(Product._id)" class="btn"><i style="height: 40px;" class="text-danger fa-solid fa-heart-circle-minus fa-2x"></i></button>
                       <button class="btn"><i style="height: 40px;"
                           class="fa-solid fa-cart-plus text-success me-1 fa-2x"></i></button>
       
